--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -552,21 +552,29 @@
       color: #fff;
       border-radius: 12px;
 
+      .name {
+        color: #fff;
+      }
       .price {
         color: #fff;
       }
+    }
+
+    &:hover .name a {    
+      color: #fff;      
     }
 
     &:not(:last-of-type) {
       border-bottom: 2px solid $bgc;
     }
 
-    .name {
+    .name, .name a {
+      color: $font;
       @include fz(20);
       font-weight: 400;
       letter-spacing: 0.2px;
-      line-height: 155%;
-    }
+      line-height: 155%;      
+    }    
 
     .price {
       @include fz(20);
@@ -709,6 +717,11 @@
       // box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
       box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
       overflow: hidden;
+      transition: all 0.4s;
+
+      &:hover {
+        background-color: $bgc;
+      }
       
 
       &-photo {
@@ -1544,32 +1557,42 @@
           padding: 0;
         }
         
-        .breadcrumbs li {
-          display: inline-block;
-          color: #FFF;
-          @include fz(16);       
-          font-weight: 400;
-          line-height: 156.25%;
-          letter-spacing: 0.16px;
-        }
-        
-        .breadcrumbs li+li::before {
-          content: '|';
-          padding: 0 2px;          
-        }
-        
-        .breadcrumbs li a {
-          color: #FFF;          
-        }
+        .breadcrumbs {
+          &.big {
+            li {
+              @include fz(20);             
+              font-weight: 400;
+              line-height: 140%;
+              letter-spacing: 0.2px;
+            }
+          }
+
+          li {
+            display: inline-block;
+            color: #FFF;
+            @include fz(16);       
+            font-weight: 400;
+            line-height: 156.25%;
+            letter-spacing: 0.16px;
+            &:not(:last-child)::after {
+              content: '|';
+              padding: 0 1px;
+            }
+          }
+          
+          a {
+            color: #FFF;
+          }
+        }        
       }
     }
 
     &-content {
       padding-top: 80px;
-      padding-bottom: 28px;
+      padding-bottom: 80px;
 
       &-description {
-        margin-bottom: 50px;
+        margin-bottom: 50px;       
         p {
           margin: 0;
           color: $gray_dark;
@@ -1678,7 +1701,9 @@
       }
 
       &-item {
-        margin-bottom: 50px;
+        &:not(:last-child) {
+          margin-bottom: 50px; 
+        }       
         ul {
           margin-bottom: 20px;
           li {
@@ -1766,6 +1791,9 @@
         &.plus {
           .service-content-description {
             margin-bottom: 20px;
+            &.post {
+              margin-bottom: 0;
+            }
           }
         }
         &.cross {
@@ -2185,6 +2213,22 @@
     padding: 16px 20px;
     cursor: pointer;
     border-bottom: 2px solid $primary;
+    transition: all 0.4s;
+
+    &:hover {
+      background-color: $primary;
+      border-radius: 12px;
+      color: #fff;
+      .icon {
+        background: $bgc;
+      }
+      svg {
+        path {
+          transition: all 0.5s;
+          stroke: $primary;         
+        }
+      }
+    }
 
 
     .title {
