--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -126,7 +126,7 @@ a {
 	color: $link;
 	text-decoration: none;
 	outline: none;
-	transition: color .3s, border .3s;
+	transition: color .5s, border .5s;
 }
 b, strong {
 	font-weight: 700;
@@ -197,7 +197,7 @@ img {
 	@include fz(18);	
 	font-weight: 500;
 	cursor: pointer;
-	transition: background 0.3s ease-in-out;
+	transition: all 0.5s ease-in-out;
 	text-transform: uppercase;
 	user-select: none;
 
@@ -205,7 +205,12 @@ img {
 		margin-left: 12px;		
 		width: 14px;
 		height: 14px;
-		margin-right: 6px;		
+		margin-right: 6px;
+		transition: all 0.5s;
+
+		path {
+			transition: all 0.5s;
+		}
 	}
 	@media (max-width: 1680px) {
 		height: 50px;
@@ -250,7 +255,7 @@ img {
 			color: $hover_btn;
 			background: none;
 			svg {
-				transition: all 0.2s;
+				transition: all 0.5s;
 				path {
 					stroke: $hover_btn;
 				}				
@@ -271,6 +276,7 @@ img {
 		background: #FFF;
 		color: $gray_dark;
 		letter-spacing: 0.6px;
+		transition: all 0.5s;
 
 		&.active {
 			background: $pink_btn;
@@ -278,6 +284,7 @@ img {
 		}
 
 		&:hover {
+			transition: all 0.5s;
 			background: $pink_btn;
 			color: #FFF
 		}
